fix: swagger 타이핑 누락 추가
